# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: coverage  main.yml
page_analyzer/: .env  __init__.py  app.py  db.py
page_analyzer/static/: home.css
page_analyzer/templates/: checks.html  home.html  show.html
